<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
<<<<<<< HEAD
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_history"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/baseline_shopping"
        android:title="@string/title_product" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/baseline_person"
        android:title="@string/title_user" />
=======
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
>>>>>>> fa95419b5d2154a44d780bb1930917f9deab17b1

</menu>