<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.skinalyze.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
<<<<<<< HEAD
        android:id="@+id/navigation_history"
        android:name="com.dicoding.skinalyze.ui.history.HistoryFragment"
        android:label="@string/title_scan_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.dicoding.skinalyze.ui.product.ProductFragment"
        android:label="@string/title_product_rekomendation"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.dicoding.skinalyze.ui.userprofile.UserFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user" />
=======
        android:id="@+id/navigation_dashboard"
        android:name="com.dicoding.skinalyze.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.dicoding.skinalyze.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
>>>>>>> fa95419b5d2154a44d780bb1930917f9deab17b1
</navigation>